--- a/restaurant.html
+++ b/restaurant.html
@@ -28,6 +28,10 @@
 
     <!-- Beginning main -->
     <main id="maincontent">
+
+      <!-- Skip Link -->
+      <a href="#restaurant-name" class="skip-link">Skip to main content</a>
+
       <!-- Beginning map -->
       <section id="map-container">
         <div id="map"></div>
@@ -35,7 +39,7 @@
       <!-- End map -->
       <!-- Beginning restaurant -->
       <section id="restaurant-container">
-        <h1 id="restaurant-name"></h1>
+        <h2 id="restaurant-name"></h2>
         <img id="restaurant-img">
         <p id="restaurant-cuisine"></p>
         <p id="restaurant-address"></p>
